--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Testing Multiple Remote</h1>
     <br><br><br>
     <p>Ni tulisan nampak dak?</p>
+    <p>Kalu misalnya tak nampak, boleh telpon aku kok :)</p>
 </body>
 </html>
