--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <br><br><br>
     <p>Ni tulisan nampak dak?</p>
     <p>Kalu misalnya tak nampak, boleh telpon aku kok :)</p>
+    <br><br>
+    <p>Alhasil ga ada yang telpon, sed :(</p>
 </body>
 </html>
