--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>Kalu misalnya tak nampak, boleh telpon aku kok :)</p>
     <br><br>
     <p>Alhasil ga ada yang telpon, sed :(</p>
+    <p>Coba lagi kann</p>
 </body>
 </html>
