--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Ni tulisan nampak dak?</p>
     <p>Kalu misalnya tak nampak, boleh telpon aku kok :)</p>
     <br><br>
-    <p>Alhasil ga ada yang telpon, sed :(</p>
+    <p>Tuh kan, ape yak(</p>
     <p>Coba lagi kann</p>
 </body>
 </html>
